Fix double scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,8 +3,6 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Vollkorn', serif;
-  overflow-x: hidden;
-
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
